1.0 内存与垃圾回收