@@ -1,2 +1,9 @@
-package com.ohj.chapter8;public class YoungOldAreaTest {
+package com.ohj.chapter8;
+
+//测试： 大对象直接进入老年代
+// -Xms60m -Xmx60m -XX:NewRatio=2 -XX:SurvivorRatio=8 -XX:+PrintGCDetails
+public class YoungOldAreaTest {
+    public static void main(String[] args) {
+        byte[] bytes = new byte[1024 * 1024 * 20];  //20m
+    }
 }
